--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style type="text/css">
   @font-face{
     font-family:JF-DOT-K12;
-    src: url(/Library/Fonts/JF-Dot-K12.ttf);
+    src: url(/Fonts/JF-Dot-K12.ttf);
   }
   div.main {
     color: #008000;
