Add a background image
Add a background image and modify code for handling it.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   }
   </style>
 </head>
-<body background="./glassland.png">
+<body background="./Imgs/glassland.png">
 <div id="wrapper" class="main">
 <center><h1 style="color:#AEFFBD">pomcho555</h1></center>
 
