--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
   <div class="caption">Software</div>
   <div class="content">
     <ul>
+      <li><a href="https://github.com/pomcho555/pylanarian">pylanarian</a></li>
+      => A plotting package for realtime data
       <li>Breakout-Maker</li>
       => The demo-play is available <a href="https://pomcho555.github.io/Breakout-Maker/">here</a>
       <li><a href="https://github.com/pomcho555/SwR">SWR</a></li>
